fixed volunteer available shift jquery

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -652,6 +652,7 @@ a:hover {
     padding: 25px 25px 65px 25px;
     border-width: 3px;
     position: static;
+    display: run-in;
     
     &:hover,
     &:focus {
